<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ttu.www.theerrors_fitlyfe.Calorie_Input">

    <EditText
        android:id="@+id/calories"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_marginTop="112dp"
        android:contentDescription="Enter Calorie"
        android:ems="10"
        android:hint="Enter Calories"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/foodname"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:contentDescription="Enter Food"
        android:ems="10"
        android:hint="Enter Food Name"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/sugar"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:contentDescription="Enter Sugar"
        android:ems="10"
        android:hint="Enter Sugar (g)"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodname" />

    <Button
        android:id="@+id/submit"
        android:layout_width="145dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:text="Submit"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories" />

</android.support.constraint.ConstraintLayout>
