<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ttu.www.theerrors_fitlyfe.Exercise_Input">

    <EditText
        android:id="@+id/exercise"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:contentDescription="How long was your workout"
        android:ems="10"
        android:hint="Enter workout length"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/workoutname"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:contentDescription="What did you do?"
        android:ems="10"
        android:hint="What did you do?"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="145dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:text="Submit"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise" />

</android.support.constraint.ConstraintLayout>
